--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 		<!-- xhr.send (); -->
 		
 		<!-- </script> -->
-		<script charset="UTF-8" src="./sopawcore.js"></script>
+		<script charset="UTF-8" src="./sopawcore.js" databases="sopawdeities sopawholidays"></script>
 	</head>
 </html>
