--- a/index.html
+++ b/index.html
@@ -3,26 +3,9 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-		<link href="https://static.staticsave.com/sopaw/cgdictcore.css" rel="stylesheet">
+
+		<link href="https://urielmorningstar.github.io/SOPAW/searchstyle.css" rel="stylesheet">
 		<meta charset="UTF-8">
-		<!-- <script searchdata="https://static.staticsave.com/sopaw/cgdict001.js" src="https://static.staticsave.com/sopaw/cgdictcore.js"></script> -->
-		<!-- <script searchdata="https://static.staticsave.com/sopaw/cgdict001.js" type="text/javascript" src="https://raw.githubusercontent.com/urielmorningstar/SOPAWSearchData/main/core.js"></script> -->
-		<!-- <script type="text/javascript"> -->
-		
-		<!-- let xhr = new XMLHttpRequest (); -->
-		<!-- xhr.open ("GET", "sopawdeities.xml"); -->
-		<!-- xhr.setRequestHeader ("Cache-control", "no-cache, no-store, max-age=0"); -->
-		<!-- xhr.setRequestHeader ("Expires", "Tue, 01 Jan 1980 1:00:00 GMT"); -->
-		<!-- xhr.setRequestHeader ("Pragma", "no-cache"); -->
-		<!-- xhr.onload = function (data) { -->
-			<!-- let respTxt = data.target.response; -->
-			<!-- let xml = new DOMParser ().parseFromString (respTxt, "text/xml"); -->
-			
-			<!-- console.log ([...xml.querySelectorAll ("entry")]); -->
-		<!-- } -->
-		<!-- xhr.send (); -->
-		
-		<!-- </script> -->
-		<script charset="UTF-8" src="./sopawcore.js" databases="sopawdeities sopawholidays"></script>
+		<script charset="UTF-8" src="https://urielmorningstar.github.io/SOPAW/sopawcore.js" databases="sopawdeities sopawholidays"></script>
 	</head>
 </html>
