--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-	<head>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-
-		<link href="https://urielmorningstar.github.io/SOPAW/searchstyle.css" rel="stylesheet">
-		<meta charset="UTF-8">
-		<script charset="UTF-8" src="https://urielmorningstar.github.io/SOPAW/sopawcore.js" databases="sopawdeities sopawholidays"></script>
-	</head>
-</html>
+<script src="https://urielmorningstar.github.io/SOPAW/sopaw.js" databases="sopawdeities sopawholidays"></script>
